--- a/note/Storage/IBM_Storage/DS4000_5000.md
+++ b/note/Storage/IBM_Storage/DS4000_5000.md
@@ -1,25 +1,95 @@
-# DS 4000/5000
------
-## 一、Infrastructure
------
+# DS 4000/5000  
+-----  
+## `No.1:` Infrastructure  
+----- 
 
-## 二、Daily Operation
+LNN(Logical Unit Number)
+
+## `No.2:` Daily Operation  
 ----
-### 1、Create Raid Group
+### 1、Create Raid  
+1. 在`Logical`栏的`Total Unconfigured Capacity`上右击,选择`Create Array`
+![enter description here][1]
 
-### 2、Create LUN
+2. 介绍,点击`Next`
+![enter description here][2]
 
-### 2、Mapping to host
+3. 填写`Array name`,这里选择`Manual`(手动模式),点击`Next`
+![enter description here][3]
 
-## 三、Maintenance Operation
-----
-### 1、更换硬盘
-> RAID重构数据的时间的长短是以磁盘容量来决定的，而不是以数据大小决定
-1. 拔插硬盘的前提
-	+ 不要拔错盘，一般在软件中slot是0-15，而在存储笼子上是1-16；
-	+ 热备盘的狂闪结束，即热备盘数据重构结束。
-2. 当Storage Manager软件中亮红色的情况
-	+ 同时磁盘也亮
-3. 当Storage Manager软件中亮黄色的情况
+4. 选择`RAID level`,选择要加入RAID的磁盘，点击`Calculate Capacity`计算容量,点击`Finish`
+![enter description here][4]
 
-### 2、更换控制器
+5. 询问是否希望使用新阵列创建一个逻辑驱动器,点击`Yes`
+![enter description here][5]
+
+6. 可以看到刚建的RAID了
+![enter description here][6]
+
+### 2、Create Hotspare
+1. 在`Physical`栏中选择要做Hotspare盘的Disk右击,选择`Hot Spare Coverage`
+![enter description here][7]
+
+2. 这里有多种方式选择,尤其第一个方式功能最全,这里选择`Manually assign individual drives`(手动),点击`OK`
+![enter description here][8]
+
+3. 可以看到Hotspare盘了
+![enter description here][9]
+
+
+### 3、Create LUN  
+1. 在`Free Capacity`上右击选择`Create Logical Drive`
+![enter description here][10]
+
+2. 介绍,点击`Next`
+![enter description here][11]
+
+3. 填写新建逻辑驱动器的的大小和名称,高级参数选择`Customize setting`(自定义设置),点击`Next`
+![enter description here][12]
+
+4. 选择启动器I/O性能类型和首选控制器,这里现在`File system`类型和`Slot A`控制器
+![enter description here][13]
+
+5. 选择Mapping的方式,这里选择`Map later using the Mapping view`,点击`Finish`
+![enter description here][14]
+
+6. 你想创建另一个逻辑启动器吗?这里点击`No`
+![enter description here][15]
+
+7. 创建完成的信息提示,点击`OK`
+![enter description here][16]
+
+### 4、Mapping to host  
+
+
+## `No.3:` Maintenance Operation  
+----  
+### 1、更换硬盘  
+> RAID重构数据的时间的长短是以磁盘容量来决定的，而不是以数据大小决定    
+
+1. 拔插硬盘的前提  
+	+ 不要拔错盘，一般在软件中slot是0-15，而在存储笼子上是1-16；  
+	+ 热备盘的狂闪结束，即热备盘数据重构结束。  
+2. 当Storage Manager软件中亮红色的情况  
+	+ 同时磁盘也亮   
+3. 当Storage Manager软件中亮黄色的情况   
+
+### 2、更换控制器  
+
+
+  [1]: ./images/DS4xxx_create_raidgroup1.png "DS4xxx_create_raidgroup1"
+  [2]: ./images/DS4xxx_create_raidgroup2.png "DS4xxx_create_raidgroup2"
+  [3]: ./images/DS4xxx_create_raidgroup3.png "DS4xxx_create_raidgroup3"
+  [4]: ./images/DS4xxx_create_raidgroup4.png "DS4xxx_create_raidgroup4"
+  [5]: ./images/DS4xxx_create_raidgroup5.png "DS4xxx_create_raidgroup5"
+  [6]: ./images/DS4xxx_create_raidgroup6.png "DS4xxx_create_raidgroup6"
+  [7]: ./images/DS4xxx_create_hotspare1.png "DS4xxx_create_hotspare1"
+  [8]: ./images/DS4xxx_create_hotspare2.png "DS4xxx_create_hotspare2"
+  [9]: ./images/DS4xxx_create_hotspare3.png "DS4xxx_create_hotspare3"
+  [10]: ./images/DS4xxx_create_lun1.png "DS4xxx_create_lun1"
+  [11]: ./images/DS4xxx_create_lun2.png "DS4xxx_create_lun2"
+  [12]: ./images/DS4xxx_create_lun3.png "DS4xxx_create_lun3"
+  [13]: ./images/DS4xxx_create_lun4.png "DS4xxx_create_lun4"
+  [14]: ./images/DS4xxx_create_lun5.png "DS4xxx_create_lun5"
+  [15]: ./images/DS4xxx_create_lun6.png "DS4xxx_create_lun6"
+  [16]: ./images/DS4xxx_create_lun7.png "DS4xxx_create_lun7"
