--- a/note/Storage/IBM_Storage/DS4000_5000.md
+++ b/note/Storage/IBM_Storage/DS4000_5000.md
@@ -3,63 +3,118 @@
 ## `No.1:` Infrastructure  
 ----- 
 
-LNN(Logical Unit Number)
+LNN(Logical Unit Number)  
 
 ## `No.2:` Daily Operation  
 ----
 ### 1、Create Raid  
-1. 在`Logical`栏的`Total Unconfigured Capacity`上右击,选择`Create Array`
-![enter description here][1]
+1. 在`Logical`栏的`Total Unconfigured Capacity`上右击,选择`Create Array`  
+![enter description here][1]  
 
 2. 介绍,点击`Next`  
-![enter description here][2]
+![enter description here][2]  
 
 3. 填写`Array name`,这里选择`Manual`(手动模式),点击`Next`  
-![enter description here][3]
+![enter description here][3]  
 
 4. 选择`RAID level`,选择要加入RAID的磁盘，点击`Calculate Capacity`计算容量,点击`Finish`  
-![enter description here][4]
+![enter description here][4]  
 
 5. 询问是否希望使用新阵列创建一个逻辑驱动器,点击`Yes`  
-![enter description here][5]
+![enter description here][5]  
 
 6. 可以看到刚建的RAID了  
-![enter description here][6]
+![enter description here][6]  
 
 ### 2、Create Hotspare
 1. 在`Physical`栏中选择要做Hotspare盘的Disk右击,选择`Hot Spare Coverage`  
-![enter description here][7]
+![enter description here][7]  
 
 2. 这里有多种方式选择,尤其第一个方式功能最全,这里选择`Manually assign individual drives`(手动),点击`OK`  
-![enter description here][8]   
+![enter description here][8]    
 
-3. 可以看到Hotspare盘了  
-![enter description here][9]
-
+3. 可以看到Hotspare盘了   
+![enter description here][9]  
 
 ### 3、Create LUN   
 1. 在`Free Capacity`上右击选择`Create Logical Drive`    
-![enter description here][10]
+![enter description here][10]  
 
 2. 介绍,点击`Next`  
-![enter description here][11]
+![enter description here][11]  
 
 3. 填写新建逻辑驱动器的的大小和名称,高级参数选择`Customize setting`(自定义设置),点击`Next`  
-![enter description here][12]
+![enter description here][12]  
 
 4. 选择启动器I/O性能类型和首选控制器,这里现在`File system`类型和`Slot A`控制器  
-![enter description here][13]
+![enter description here][13]  
 
 5. 选择Mapping的方式,这里选择`Map later using the Mapping view`,点击`Finish`  
-![enter description here][14]
+![enter description here][14]  
 
 6. 你想创建另一个逻辑启动器吗?这里点击`No`  
-![enter description here][15]
+![enter description here][15]  
 
 7. 创建完成的信息提示,点击`OK`  
-![enter description here][16]
+![enter description here][16]    
 
 ### 4、Mapping to host  
+1. 单击`Mappings View`弹出Mapping的帮助信息,有一个操作流程的概述,点击`Close`  
+![enter description here][17]  
+
+2. 定义主机组;有两个或多个主机共享同一个逻辑驱动器时定义主机组,否则不是必要的  
+![enter description here][18]  
+填写主机组名称,这里`Default Group`中没有定义主机,故而不需要添加主机,直接点击`OK`  
+![enter description here][19]  
+
+3. 定义主机  
+![enter description here][20]  
+是否在这个存储子系统(主机)上使用存储分区,选择`NO`时
+![enter description here][21]  
+指定主机名/HBA属性,点击`Next`   
+![enter description here][22]  
+指定主机类型,这里选择Linux,点击`Next`  
+![enter description here][23]  
+是否指定主机组,指定主机组后可以与同组主机共享同一逻辑驱动器,这里选择`Yes`,点击`Next`    ???
+![enter description here][24]
+指定主机组,可以新建一个主机组,这里现在前面建好的`Linux`主机组,点击`Next`   
+![enter description here][25]  
+确认信息,点击`Finish`    
+![enter description here][26]  
+要定义另一个主机吗？选择`NO`  
+![enter description here][27]  
+
+4. 使用`Stortage Partitioning`选项定义存储分区。   
+![enter description here][28]  
+存储分区向导,点击`Next`  
+![enter description here][29]  
+选择主机组或主机,这里选择主机,点击`Next`   ???
+![enter description here][30]  
+选择逻辑驱动器(logical drives)点击`Finish`  
+![enter description here][31]   
+完成   
+![enter description here][32]   
+来个最终的截图  
+![enter description here][33]  
+
+5. 对端主机查看
+    ```
+    [root@localhost ~]# partprobe
+    [root@localhost ~]# lsblk
+    NAME                        MAJ:MIN RM   SIZE RO TYPE  MOUNTPOINT
+    sr0                          11:0    1  1024M  0 rom   
+    sda                           8:0    0   557G  0 disk  
+    ├─sda1                        8:1    0   200M  0 part  /boot/efi
+    ├─sda2                        8:2    0   500M  0 part  /boot
+    └─sda3                        8:3    0 556.3G  0 part  
+      ├─VolGroup-lv_root (dm-0) 253:0    0    50G  0 lvm   /
+      ├─VolGroup-lv_swap (dm-1) 253:1    0   7.8G  0 lvm   [SWAP]
+      └─VolGroup-lv_home (dm-3) 253:3    0 498.4G  0 lvm   /home
+    sdb                           8:16   0    50G  0 disk  
+    └─mpathc (dm-2)             253:2    0    50G  0 mpath 
+    sdc                           8:32   0    50G  0 disk  
+    └─mpathc (dm-2)             253:2    0    50G  0 mpath 
+    ```
 
 
 ## `No.3:` Maintenance Operation  
@@ -93,3 +148,20 @@ LNN(Logical Unit Number)
   [14]: ./images/DS4xxx_create_lun5.png "DS4xxx_create_lun5"
   [15]: ./images/DS4xxx_create_lun6.png "DS4xxx_create_lun6"
   [16]: ./images/DS4xxx_create_lun7.png "DS4xxx_create_lun7"
+  [17]: ./images/DS4xxx_Mapping1.png "DS4xxx_Mapping1"
+  [18]: ./images/DS4xxx_Mapping2.png "DS4xxx_Mapping2"
+  [19]: ./images/DS4xxx_Mapping3.png "DS4xxx_Mapping3"
+  [20]: ./images/DS4xxx_Mapping4.png "DS4xxx_Mapping4"
+  [21]: ./images/DS4xxx_Mapping5.png "DS4xxx_Mapping5"
+  [22]: ./images/DS4xxx_Mapping6.png "DS4xxx_Mapping6"
+  [23]: ./images/DS4xxx_Mapping7.png "DS4xxx_Mapping7"
+  [24]: ./images/DS4xxx_Mapping8.png "DS4xxx_Mapping8"
+  [25]: ./images/DS4xxx_Mapping9.png "DS4xxx_Mapping9"
+  [26]: ./images/DS4xxx_Mapping10.png "DS4xxx_Mapping10"
+  [27]: ./images/DS4xxx_Mapping11.png "DS4xxx_Mapping11"
+  [28]: ./images/DS4xxx_Mapping12.png "DS4xxx_Mapping12"
+  [29]: ./images/DS4xxx_Mapping13.png "DS4xxx_Mapping13"
+  [30]: ./images/DS4xxx_Mapping14.png "DS4xxx_Mapping14"
+  [31]: ./images/DS4xxx_Mapping15.png "DS4xxx_Mapping15"
+  [32]: ./images/DS4xxx_Mapping16.png "DS4xxx_Mapping16"
+  [33]: ./images/DS4xxx_Mapping17.png "DS4xxx_Mapping17"
