--- a/note/Storage/IBM_Storage/DS4000_5000.md
+++ b/note/Storage/IBM_Storage/DS4000_5000.md
@@ -1,12 +1,11 @@
 # DS 4000/5000  
------  
+---
 ## `No.1:` Infrastructure  
------ 
-
+---
 LNN(Logical Unit Number)  
 
 ## `No.2:` Daily Operation  
-----
+---
 ### 1、Create Raid  
 1. 在`Logical`栏的`Total Unconfigured Capacity`上右击,选择`Create Array`  
 ![enter description here][1]  
@@ -69,15 +68,16 @@ LNN(Logical Unit Number)
 
 3. 定义主机  
 ![enter description here][20]  
-是否在这个存储子系统(主机)上使用存储分区,选择`NO`时
+是否在这个存储子系统上使用存储分区,选择`NO`时   
+a. `storage partitions`: 即LUN Masking技术，即采用LUN屏蔽方式实现不同主机之间的存储空间隔离。该技术与光纤交换机的Zoning技术类似，都是对访问控制器进行限制。Zoning是确定哪个主机可以访问哪个存储，Storage Partition是进一步限定这个主机只可以访问该存储的哪个/哪些LUN。此功能需要License;若果LUN Mapping 到host,一台host占用一个`Storage partition`;如果LUN Mapping到`Host Group`,一个`Host Group`占一个`Storage partition`。注意，在一个Storage partition中的主机操作系统类型必须是相同的。
 ![enter description here][21]  
 指定主机名/HBA属性,点击`Next`   
 ![enter description here][22]  
 指定主机类型,这里选择Linux,点击`Next`  
 ![enter description here][23]  
-是否指定主机组,指定主机组后可以与同组主机共享同一逻辑驱动器,这里选择`Yes`,点击`Next`    ???
+是否指定主机组,指定主机组后可以与同组主机共享Mapping到主机组的逻辑驱动器,这里选择`Yes`,点击`Next`    
 ![enter description here][24]
-指定主机组,可以新建一个主机组,这里现在前面建好的`Linux`主机组,点击`Next`   
+指定主机组,可以新建一个主机组,这里选择前面建好的`Linux`主机组,点击`Next`   
 ![enter description here][25]  
 确认信息,点击`Finish`    
 ![enter description here][26]  
@@ -88,7 +88,7 @@ LNN(Logical Unit Number)
 ![enter description here][28]  
 存储分区向导,点击`Next`  
 ![enter description here][29]  
-选择主机组或主机,这里选择主机,点击`Next`   ???
+选择主机组或主机,这里选择主机,点击`Next`   
 ![enter description here][30]  
 选择逻辑驱动器(logical drives)点击`Finish`  
 ![enter description here][31]   
@@ -117,17 +117,28 @@ LNN(Logical Unit Number)
     ```
 
 
-## `No.3:` Maintenance Operation  
-----  
+## `No.3:` Maintenance Operation   
+---
 ### 1、更换硬盘  
 > RAID重构数据的时间的长短是以磁盘容量来决定的，而不是以数据大小决定    
 
 1. 拔插硬盘的前提  
 	+ 不要拔错盘，一般在软件中slot是0-15，而在存储笼子上是1-16；  
 	+ 热备盘的狂闪结束，即热备盘数据重构结束。  
-2. 当Storage Manager软件中亮红色的情况  
-	+ 同时磁盘也亮   
-3. 当Storage Manager软件中亮黄色的情况   
+2. 当Storage Manager软件中有告警(坏道)的情况   
+这中情况因为Disk没有彻底坏掉,故而Disk实际是工作的,不能直接拔插盘;应将Disk标记为failed状态,在进行移除磁盘操作   
+这里以好盘做实验
+![enter description here][34]  
+确认failed磁盘  
+![enter description here][35]  
+热备盘自动顶上,数据开始重构   
+![enter description here][36]  
+数据重构结束后拔盘操作
+![enter description here][37]  
+插入好盘数据回拷
+![enter description here][38]  
+数据回拷完毕,原来的热备盘又做热备盘了
+![enter description here][39]
 
 ### 2、更换控制器  
 
@@ -165,3 +176,9 @@ LNN(Logical Unit Number)
   [31]: ./images/DS4xxx_Mapping15.png "DS4xxx_Mapping15"
   [32]: ./images/DS4xxx_Mapping16.png "DS4xxx_Mapping16"
   [33]: ./images/DS4xxx_Mapping17.png "DS4xxx_Mapping17"
+  [34]: ./images/DS4xxx_disk1.png "DS4xxx_disk1"
+  [35]: ./images/DS4xxx_disk2.png "DS4xxx_disk2"
+  [36]: ./images/DS4xxx_disk3.png "DS4xxx_disk3"
+  [37]: ./images/DS4xxx_disk4.png "DS4xxx_disk4"
+  [38]: ./images/DS4xxx_disk5.png "DS4xxx_disk5"
+  [39]: ./images/DS4xxx_disk6.png "DS4xxx_disk6"
