--- a/note/Storage/存储基础知识.md
+++ b/note/Storage/存储基础知识.md
@@ -4,3 +4,35 @@ tags: 新建,模板,小书匠
 grammar_cjkRuby: true
 ---
 ### 一、存储介质
+
+
+
+## `No.1:` 存储技术  
+### 1. DAS  
+
+
+### 2. NAS   
+
+
+### 3. SAN   
+> SAN（Storage Area Network）存储区域网络，是一种高速的、专门用于存储操作的网络，通常独立于计算机局域网（LAN）。SAN将主机和存储设备连接在一起，能够为其上的任意一台主机和任意一台存储设备提供专用的通信通道。SAN将存储设备从服务器中独立出来，实现了服务器层次上的存储资源共享。SAN将通道技术和网络技术引入存储环境中，提供了一种新型的网络存储解决方案，能够同时满足吞吐率、可用性、可靠性、可扩展性和可管理性等方面的要求。   
+
+1. FC-SAN  
+通常SAN由磁盘阵列（RAID）连接光纤通道（Fibre Channel）组成（为了区别于IP SAN，通常SAN也称为FC-SAN）。SAN和服务器和客户机的数据通信通过SCSI命令而非TCP/IP，数据处理是“块级”（block level）。SAN也可以定义为是以数据存储为中心，它采用可伸缩的网络拓扑结构，通过具有高传输速率的光通道的直接连接方式，提供SAN内部任意节点之间的多路可选择的数据交换，并且将数据存储管理集中在相对独立的存储区域网内。SAN最终将实现在多种操作系统下，最大限度的数据共享和数据优化管理，以及系统的无缝扩充。   
+
++ FC-SAN组成   
+	+ FC卡：主要用于主机与FC设备之间的连接。  
+	+ FC HUB：内部运行仲裁环拓扑，连接到HUB的节点共享100MB/S带宽（或更高）   
+	+ FC交换机：内部运行Fabric拓扑，每端口独占100MB/S带宽（或更高）   
+	+ FC存储设备：采用FC连接方式，光纤接口可以有一到多个。FC存储设备通常采用光纤的硬盘，也有Fibre to SCSI（Fibre to ATA）的解决方案，使用SCSI（或ATA）的硬盘，在整个配置上较便宜   
+	+ 存储网络管理软件：存储管理软件主要的功能是自动发现网络拓扑及映射，当在存储网络中增加或减少时自动发现及组态   
+	+ 高性能的光纤通道交换机和光纤通道网络协议是FC-SAN的关键。把以光纤通道交换机为骨干的网络拓扑结构称为“SAN Fabric”。而光纤通道协议是FC-SAN的另一个本质特征。FC-SAN正是利用光纤通道协议上加载SCSI协议来达到可靠的块级数据传输。   
++ FC-SAN应用场景
+	+ 关键任务数据库应用，其中可预计的响应时间、可用性和可扩展性是基本要素   
+	+ 集中的存储备份，其中性能、数据一致性和可靠性可以确保企业关键数据的安全   
+	+ 高可用性和故障切换环境可以确保更低的成本、更高的应用水平   
+	+ 可扩展的存储虚拟化，可使存储与直接主机连接相分离，并确保动态存储分区   
+	+ 改进的灾难容错特性，在主机服务器及其连接设备之间提供光纤通道高性能和扩展的距离   
+
+2. IP SAN  
+
